[gd_scene load_steps=4 format=3 uid="uid://b152stqnpng2k"]

[ext_resource type="Script" path="res://Scene_Switcher/Menu/hud_score.gd" id="1_xntjc"]
[ext_resource type="Theme" uid="uid://bae841tqt1b6d" path="res://Scene_Switcher/alligator_theme.tres" id="2_qbk6m"]
[ext_resource type="Texture2D" uid="uid://ur3md7dtsjbk" path="res://Scene_Switcher/Menu/asset/hud_asset/text_background.png" id="3_ka3e7"]

[node name="hud_score" type="CanvasLayer"]
script = ExtResource("1_xntjc")

[node name="score_cont" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qbk6m")
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 64

[node name="bg_cont" type="MarginContainer" parent="score_cont"]
layout_mode = 2
theme_override_constants/margin_left = -320
theme_override_constants/margin_top = -160

[node name="bg" type="TextureRect" parent="score_cont/bg_cont"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
texture = ExtResource("3_ka3e7")
stretch_mode = 2

[node name="column" type="HBoxContainer" parent="score_cont"]
layout_mode = 2

[node name="lines" type="VBoxContainer" parent="score_cont/column"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Score_Label" type="Label" parent="score_cont/column/lines"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.0235294, 0.0235294, 0.0235294, 0.768627)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 64
text = "Score : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Difficulty_Label" type="Label" parent="score_cont/column/lines"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.0235294, 0.0235294, 0.0235294, 0.768627)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "Difficulty : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="space" type="MarginContainer" parent="score_cont/column"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
